fix: overflow x & index border

--- a/html/css/common.css
+++ b/html/css/common.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 body {
-	width: 100vw;
 	margin: 0;
 	font-family: 'Noto Sans KR', sans-serif;
 	background-color: #212121;
+	overflow-x: hidden;
 }
